--- a/the_project/requirements.txt
+++ b/the_project/requirements.txt
@@ -7,6 +7,7 @@ asgiref==3.5.0
 async-timeout==4.0.2
 attrs==21.4.0
 av==8.1.0
+cached-property==1.5.2
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
@@ -23,25 +24,38 @@ frozenlist==1.3.0
 google-crc32c==1.3.0
 greenlet==1.1.2
 h11==0.13.0
+httptools==0.4.0
 idna==3.3
+injectable==3.4.7
 itsdangerous==2.1.0
 Jinja2==3.0.3
+lazy-object-proxy==1.7.1
 MarkupSafe==2.1.0
 multidict==6.0.2
+mypy-extensions==0.4.3
 netifaces==0.11.0
 numpy==1.22.2
 opencv-python==4.5.5.62
+parameters-validation==1.2.0
 Pillow==9.0.1
+pycollect==0.2.3
 pycparser==2.21
 pydantic==1.9.0
 pyee==9.0.4
 pylibsrtp==0.7.1
 pyOpenSSL==22.0.0
+python-dotenv==0.19.2
+python-multipart==0.0.5
+PyYAML==6.0
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
 starlette==0.17.1
 typing-extensions==4.1.1
-uvicorn==0.17.5
+typing-inspect==0.7.1
+uvicorn==0.17.6
+uvloop==0.16.0
+watchgod==0.8
+websockets==10.2
 Werkzeug==2.0.3
 yarl==1.7.2
