--- a/the_project/requirements.txt
+++ b/the_project/requirements.txt
@@ -1,61 +1,130 @@
+absl-py==1.1.0
 aiohttp==3.8.1
 aioice==0.7.6
 aiortc==1.3.0
 aiosignal==1.2.0
 anyio==3.5.0
 asgiref==3.5.0
+asttokens==2.0.5
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==21.4.0
 av==8.1.0
+backcall==0.2.0
 cached-property==1.5.2
+cachetools==5.2.0
+certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
 cmake==3.22.3
 cryptography==36.0.1
+cycler==0.11.0
+debugpy==1.6.0
+decorator==5.1.1
 dlib==19.23.99
 dnspython==2.2.0
+entrypoints==0.4
+executing==0.8.3
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 fastapi==0.74.1
 Flask==2.0.3
 Flask-SQLAlchemy==2.5.1
+flatbuffers==1.12
+fonttools==4.33.3
 frozenlist==1.3.0
+gast==0.4.0
+google-auth==2.6.6
+google-auth-oauthlib==0.4.6
 google-crc32c==1.3.0
+google-pasta==0.2.0
 greenlet==1.1.2
+grpcio==1.46.3
 h11==0.13.0
+h5py==3.7.0
 httptools==0.4.0
 idna==3.3
+importlib-metadata==4.11.4
 injectable==3.4.7
+ipykernel==6.13.0
+ipython==8.4.0
 itsdangerous==2.1.0
+jedi==0.18.1
 Jinja2==3.0.3
+jupyter-client==7.3.1
+jupyter-core==4.10.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
 lazy-object-proxy==1.7.1
+libclang==14.0.1
+Markdown==3.3.7
 MarkupSafe==2.1.0
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
 multidict==6.0.2
 mypy-extensions==0.4.3
+nest-asyncio==1.5.5
 netifaces==0.11.0
 numpy==1.22.2
+oauthlib==3.2.0
 opencv-python==4.5.5.62
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.2
 parameters-validation==1.2.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.0.1
+prompt-toolkit==3.0.29
+protobuf==3.19.4
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycollect==0.2.3
 pycparser==2.21
 pydantic==1.9.0
 pyee==9.0.4
+Pygments==2.12.0
 pylibsrtp==0.7.1
 pyOpenSSL==22.0.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
+pytz==2022.1
 PyYAML==6.0
+pyzmq==23.1.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.32
+stack-data==0.2.0
 starlette==0.17.1
+tensorboard==2.9.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
+tornado==6.1
+traitlets==5.2.2.post1
 typing-extensions==4.1.1
 typing-inspect==0.7.1
+urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8
+wcwidth==0.2.5
 websockets==10.2
 Werkzeug==2.0.3
+wrapt==1.14.1
 yarl==1.7.2
+zipp==3.8.0
